# smacbot

./: .gitignore  Main.hs  Paste.hs  README.md  smacbot.cabal
.github/workflows/: ci.yml
