cabal-version:       3.0
name:                smacbot
-- semver
version:             0
synopsis:            XMPP MUC bot
description:         To serve the diverse interests of SMAC community.
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Sergey Alirzaev
maintainer:          zl29ah@gmail.com
-- copyright:
category:            Network, CLI, XMPP
build-type:          Simple
tested-with:         GHC == 9.8.4

Source-repository head
  type:              git
  location:          https://github.com/l29ah/smacbot.git

Source-repository this
  type:              git
  location:          https://github.com/l29ah/smacbot.git
  tag:               0

executable smacbot
  main-is:             Main.hs
  ghc-options:         -W -Wcompat -fno-warn-tabs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 5,
                       pontarius-xmpp >= 0.5 && < 0.6,
                       pontarius-xmpp-extras >= 0.1.0.6 && < 0.2,
                       hslogger >= 1.2.8 && < 1.4,
                       string-class >= 0.1.7.0 && < 0.2,
                       text >= 1.2.4.1 && < 2.2,
                       tls >= 1.5.5 && < 2.2,
                       stm ^>= 2.5,
                       containers ^>= 0.6,
                       llama-cpp-haskell ^>= 0,
  -- hs-source-dirs:
  default-language:    Haskell2010
